Allow creating projects through the new API.
